# CHOpt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  generate_sprites.py
.github/workflows/: compiler-warnings.yml  release.yml  static-analysis.yml  tests.yml
appveyor_files/: apt_deps.txt  brew_deps.txt  install_boost.sh  mac_cli_dylibs.txt  package_cli_deps.sh  vcpkg_deps.txt
cmake/: FindCairo.cmake  FindGLIB.cmake  FindHarfBuzz.cmake  FindPango.cmake  Sanitisers.cmake
fuzzing_targets/: CMakeLists.txt  chart_fuzzer.cpp  chart_song_fuzzer.cpp  midi_fuzzer.cpp  midi_song_fuzzer.cpp
gui/: .clang-tidy  choptgui.exe.manifest  json_settings.cpp  json_settings.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
include/: activationendset.hpp  argparse_wrapper.hpp  chart.hpp  chartparser.hpp  cimg_wrapper.hpp  cxxopts_wrapper.hpp  drumsettings.hpp  engine.hpp  hopothreshold.hpp  image.hpp  imagebuilder.hpp  ini.hpp  metadata.hpp  midi.hpp  midiparser.hpp  nowide_wrapper.hpp  optimiser.hpp  parserutil.hpp  pathgraph.hpp  points.hpp  processed.hpp  settings.hpp  song.hpp  songfile.hpp  songparts.hpp  sp.hpp  sptimemap.hpp  stringutil.hpp  tempomap.hpp  time.hpp  timeconverter.hpp
integration_tests/: run_integration_tests.py  tests.db
integration_tests/songs/: 2112-pt-7-grand-finale.mid  abnormal.chart  amen-brother.chart  bark-at-the-moon.mid  black-magic.mid  cheat-on-the-church.mid  chocobo-theme.chart  cocktail-hour.chart  cult-of-personality-gh3.mid  cups-and-cakes.mid  dontholdback.mid.qb.xen  eon-break.chart  epro.mid  even-rats.mid  get-clean.mid  green-grass-and-high-tides.mid  i-must-count-my-blessings.mid  ignis-fatuus.mid  lonely-road-to-absolution.chart  loveinanelevator.mid.qb.xen  lysios.chart  me-and-u.chart  misirlou.mid  mississippi-queen-rb.mid  misunderstood.chart  mornings-eleven.chart  ocean.chart  oh-my-fucking-god.chart  pepsiman.chart  please-please-please.mid  raining-blood-sh.mid  sanae-unending-status-quo.chart  satch-boogie-live.chart  soulless.chart  stricken.mid.qb.xen  sweating-bullets.mid  the-seconds.chart  thunder-kiss-65.mid  timmy.mid  type-03.chart  (+2 more)
libs/: CImg.h  cxxopts_wrapper.hpp
misc/: How-fast-is-CHOpt.md  How-to-read-paths.md  setlist.ps1
more-info/: How-fast-is-CHOpt.md  How-to-read-paths.md
resources/: CHOpt.sh  chopt-icon.rc  chopt.exe.manifest  icon.rc  resources.qrc  resources.rc
src/: chart.cpp  chart.h  chart.hpp  chartparser.cpp  image.cpp  image.hpp  imagebuilder.cpp  ini.cpp  main.cpp  midi.cpp  midiparser.cpp  optimiser.cpp  optimiser.hpp  parserutil.cpp  points.cpp  points.hpp  processed.cpp  settings.cpp  song.cpp  songfile.cpp  songparts.cpp  sp.cpp  sp.hpp  sptimemap.cpp  stringutil.cpp  tempomap.cpp  time.cpp  time.hpp  timeconverter.cpp
tests/: .clang-tidy  CMakeLists.txt  activationendset_unittest.cpp  catch_main.cpp  chart_unittest.cpp  chartparser_unittest.cpp  engine_unittest.cpp  image_unittest.cpp  imagebuilder_unittest.cpp  ini_unittest.cpp  midi_unittest.cpp  midiparser_unittest.cpp  optimiser_unittest.cpp  pathgraph_unittest.cpp  points_unittest.cpp  processed_unittest.cpp  song_unittest.cpp  songparts_unittest.cpp  sp_unittest.cpp  stringutil_unittest.cpp  tempomap_unittest.cpp  test_helpers.hpp  test_main.cpp  time_unittest.cpp  timeconverter_unittest.cpp
